# thread

./: .gitignore
src/: pyproject.toml
src/thread/extraction/: __init__.py  base.py  batch_extractor.py  cli.py  config.py  models.py  session_parser.py
src/thread/extraction/extractors/: __init__.py  collaboration.py  development.py  incident.py  learning.py  operations.py  planning.py
src/thread/tests/: conftest.py  test_base.py  test_batch.py  test_extractors.py  test_models.py  test_session.py
