[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openrouter>=0.10.8",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[openrouter]>=2.1.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
